# Reverse-Proxy

./: .gitignore  CMakeLists.txt  README.md  arch.drawio  build.sh  run.sh
build_Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_Debug/Testing/Temporary/: CTestCostData.txt
config/: proxyConfig.json
doc/: architecture-documentation.md  code-organization.md  design-decisions.md  doc.md
src/: main.cpp
src/cache/: redis.cpp  redis.h  redis_client.h
src/config/: Config.cpp  Config.h
src/http/: RequestHandler.cpp  RequestHandler.h  RespnoseHandler.cpp  ResponseHandler.h  server.cpp  server.h
src/proxy/: loadBalancer.cpp  loadBalancer.h  proxyHandler.cpp  proxyHandler.h
src/security/: auth.cpp  auth.h  jwt.cpp  jwt.h  ssl.cpp  ssl.h
src/util/: ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h
tests/: test_config.cpp
